# kaonashi_finalProject

./: 50521_42.txt  README.md
kaonashi-api/: Cargo.toml
kaonashi-api/benches/: merkle.rs
kaonashi-api/src/: batches.rs  blockchain.rs  handler.rs  models.rs  zk_verify.rs
kaonashi-smart-contract/: .gitignore
kaonashi-smart-contract/programs/projeto-kaonashi/: Cargo.toml
kaonashi-smart-contract/programs/projeto-kaonashi/src/: lib.rs  proofs.rs
kaonashi-smart-contract/zk-client/src/: generate_test_wallets.rs
kaonashi_frontend/: style.css
kaonashi_frontend/src/api/: client.rs
kaonashi_frontend/src/pages/: chairperson.rs  results.rs  wallet.rs
