[package]
name = "projeto_kaonashi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "projeto_kaonashi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
solana-curve25519 = "4.0.0"
curve25519-dalek = "4.1"
sha2 = "0.10"
